// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus015Packet.proto";


package pusModelEditorMessages.protobuf;

message Pus015PacketStore {
extensions 22 to 122;

  optional ccsds_mal.protobuf.UINTEGER storeId = 1;
  optional ccsds_mal.protobuf.UINTEGER storeStatus = 2;
  optional ccsds_mal.protobuf.STRING storageType = 3;
  optional ccsds_mal.protobuf.BOOLEAN dumpEnabled = 4;
  repeated pusModelEditorMessages.protobuf.Pus015Packet pus015Packet = 5;
  optional ccsds_mal.protobuf.STRING hkStoreStatusParameterName = 6;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStoreId = 7;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeStoreId = 8;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStoreType = 9;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeStoreType = 10;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStoreStatus = 11;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeStoreStatus = 12;
  optional ccsds_mal.protobuf.STRING serviceApidName = 13;
  optional ccsds_mal.protobuf.STRING storeName = 14;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 15;
  optional ccsds_mal.protobuf.ULONG uniqueId = 16;
  optional ccsds_mal.protobuf.STRING listPossibleDownlinkVcs = 17;
  optional ccsds_mal.protobuf.UINTEGER downlinkStatus = 18;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeDownlinkStatus = 19;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeDownlinkStatus = 20;
  optional ccsds_mal.protobuf.STRING hkDownlinkStatusParameterName = 21;
}
