// Produced by Acceleo Protobuf Generator 1.1.2-R8


//////////////////////////////////////////////////////////////////////
// Start of user code HistoryZone
// HISTORY
//
// END-HISTORY
// End of user code HistoryZone
//////////////////////////////////////////////////////////////////////


import "ccsds_mal/types.proto";
import "pusModelEditor/Pus015PacketStore.proto";

package pusModelEditor.protobuf;

message Pus015Model {
extensions 7 to 107;

  repeated pusModelEditor.protobuf.Pus015PacketStore pus015PacketStore = 1;
  optional ccsds_mal.protobuf.TIME groundDate = 2;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 3;
  optional ccsds_mal.protobuf.UINTEGER status = 4;
  optional ccsds_mal.protobuf.STRING serviceApidName = 5;
  optional ccsds_mal.protobuf.ULONG uniqueId = 6;
}
